# agentic-churn-retention-agent

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
src/acra/: main.py
src/acra/agent/: auditor.py  graph.py  state.py  strategist.py  tools.py
src/acra/data/: customer_profiles.py  playbook.py  seed.py
src/acra/models/: __init__.py
src/acra/rag/: chunker.py  embeddings.py  retriever.py  vector_store.py
tests/: conftest.py  test_auditor.py  test_graph.py  test_models.py  test_rag.py  test_strategist.py  test_tools.py
