[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "acra"
version = "1.0.0"
description = "Agentic Customer Churn & Retention Agent - An AI-powered retention system using LangGraph and ChromaDB"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "ACRA Team"}
]
keywords = ["agentic-ai", "langgraph", "chromadb", "rag", "customer-retention", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "langgraph>=1.0.0",
    "langchain>=1.0.0",
    "langchain-openai>=1.0.0",
    "langchain-chroma>=0.2.0",
    "chromadb>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "sentence-transformers>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
acra = "acra.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/acra"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
